--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,11 +1,55 @@
+.foot {
+    width: 80%;
+}
 .footer {
-    max-width: 1400px;
     width: 100%;
     padding: 20px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-.foot {
+.social {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
+}
+.social li {
+    font-size: 24px;
+    list-style-type: none;
+    & a {
+        color: #fff;
+    }
+}
+
+.social li:nth-child(1) a:hover {
+    color: #229ED9;
+}
+.social li:nth-child(2) a:hover {
+    color: #ff0090;
+}
+.social li:nth-child(3) a:hover {
+    color: #1DA1F2;
+}
+.social li:nth-child(4) a:hover {
+    color: #0A66C2;
+}
+.social li:nth-child(5) a:hover {
+    color: #24292e;
+}
+.footer-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 30px 0;
+}
+.footer-bottom p {
+    color: white;
+}
+hr {
+    background: white;
+    height: 2px;
+    border: none;
 }
