--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,3 +1,46 @@
 .home {
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.hero {
+    max-width: 1400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    padding: 40px 0 40px 80px;
+}
+.userTitle {
+    max-width: 650px;
+    width: 100%;
+}
+.userTitle h4 {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 32px;
+    color: rgba(40, 41, 56, 0.95);
+}
+.userTitle h2 {
+    font-size: 67px;
+    font-weight: 700;
+    line-height: 70px;
+    padding: 10px 0;
+    color: rgba(36, 39, 108, 0.91);
+}
+.userTitle p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.userImg {
+    max-width: 600px;
+    width: 100%;
+}
+.userImg img {
+    width: 100%;
 }
