--- a/src/components/myskills/MySkills.css
+++ b/src/components/myskills/MySkills.css
@@ -2,7 +2,27 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.skills {
+    width: 60%;
+    padding: 40px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+.skill-card {
+    width: 100%;
+    text-align: center;
+}
+.skill-card h4 {
+    padding: 10px 0;
+    color: #210d50;
+}
+.skill-card img {
+    max-width: 80px;
+    min-height: 80px;
+    object-fit: contain;
 }
