--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -1,8 +1,41 @@
 .about-me {
+    max-width: 1400px;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.box {
+    margin: 50px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.image img {
+    width: 100%;
+}
+.info {
+    width: 100%;
+    color: #282938;
+}
+.info h5 {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 32px;
+}
+.info h2 {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 76px;
+    padding: 10px 0;
+}
+.info p {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
 }
