--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -1,4 +1,5 @@
 .portfolio {
+    max-width: 1400px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -55,9 +56,10 @@
 .technologie {
     font-size: 16px;
     padding: 10px 0;
+    line-height: 28px;
 }
 .technologie span {
-    padding: 4px 6px;
+    padding: 4px 12px;
     border: 1px solid rgba(255, 255, 255, 0.68);
     border-radius: 12px;
     background-color: rgba(209, 218, 214, 0.84);
